Revision history for BioX-Writer

{{$NEXT}}

0.17  2015-12-09 12:49:15 GST
    - Wrote tests and made a fix for local vars

0.16  2015-11-30 10:45:01 GST
    - Bug fix on special indir/outdir vars

0.15  2015-11-29 11:28:25 GST
    Bug fix - Data::Pairs making shallow copies so added Storable to cpanfile

0.14  2015-11-25 12:19:54 GST
    Made some more changes to local_attr and outdir/indir

0.13  2015-11-25 10:53:46 GST
    Made some changes to local attr

0.12  2015-11-23 10:09:39 GST
    - Added global attr to eval call

0.11  2015-11-22 13:01:23 GST
    - Fixed override process

0.10  2015-11-19 12:37:46 GST
    - Lots of code refactoring for new plugin system!

0.09  2015-11-15 12:52:24 GST
    - Bug fix for by_sample_dir and evaling indirs/outdirs with Text::Template

0.08  2015-11-11 11:22:42 GST
    - Added in a BUG fix for indir/outdir not having a clearer method
    - WHY DONT I JUST USE LAZY_BUILD

0.07  2015-11-11 10:39:37 GST
    - Added in a feature for all local variables to evaluated in process template, not just INPUT/OUTPUT
    - INPUT/OUTPUT, indir/outdir are still special variables
    - Can now do things like
    - local:
        - MYLOCALTHING: "{$self->indir}/{$sample}_MYLOCALTHING.txt"

0.05  2015-11-10 11:53:21 GST
    - Missing carp::always
    - Commited bug fix with camelized rules - rule_R1 was being changed to rule_r1 in file changes

0.04  2015-11-10 10:02:44 GST
    - Missing dep in cpanfile

0.03  2015-11-09 12:54:58 GST
    - Added in some support for different output structures

0.02  2015-11-09 11:58:29 GST
    - Commiting bug fix. INPUT/OUTPUT should not be required

0.01  2015-06-23 12:41:10 AST
    - Initial release