@@ -1,5 +1,5 @@
 #
-# Samples: sample5, sample1, sample3, sample4, sample2
+# Samples: sample1, sample2, sample3, sample4, sample5
 #
 #
 # Starting Workflow
@@ -27,15 +27,15 @@
 # Outdir: t/example/data/processed/test002/backup
 #
 
-cp t/example/data/raw/test002/sample5/sample5.csv t/example/data/processed/test002/sample5/backup/sample5.csv
-
 cp t/example/data/raw/test002/sample1/sample1.csv t/example/data/processed/test002/sample1/backup/sample1.csv
+
+cp t/example/data/raw/test002/sample2/sample2.csv t/example/data/processed/test002/sample2/backup/sample2.csv
 
 cp t/example/data/raw/test002/sample3/sample3.csv t/example/data/processed/test002/sample3/backup/sample3.csv
 
 cp t/example/data/raw/test002/sample4/sample4.csv t/example/data/processed/test002/sample4/backup/sample4.csv
 
-cp t/example/data/raw/test002/sample2/sample2.csv t/example/data/processed/test002/sample2/backup/sample2.csv
+cp t/example/data/raw/test002/sample5/sample5.csv t/example/data/processed/test002/sample5/backup/sample5.csv
 
 
 wait
@@ -59,12 +59,12 @@ wait
 # Outdir: t/example/data/processed/test002/grep_VARA
 #
 
-echo "Working on t/example/data/processed/test002/sample5/backup/sample5.csv"
-grep -i "VARA" t/example/data/processed/test002/sample5/backup/sample5.csv >> t/example/data/processed/test002/sample5/grep_VARA/sample5.grep_VARA.csv
-
-
 echo "Working on t/example/data/processed/test002/sample1/backup/sample1.csv"
 grep -i "VARA" t/example/data/processed/test002/sample1/backup/sample1.csv >> t/example/data/processed/test002/sample1/grep_VARA/sample1.grep_VARA.csv
+
+
+echo "Working on t/example/data/processed/test002/sample2/backup/sample2.csv"
+grep -i "VARA" t/example/data/processed/test002/sample2/backup/sample2.csv >> t/example/data/processed/test002/sample2/grep_VARA/sample2.grep_VARA.csv
 
 
 echo "Working on t/example/data/processed/test002/sample3/backup/sample3.csv"
@@ -75,8 +75,8 @@ echo "Working on t/example/data/processed/test002/sample4/backup/sample4.csv"
 grep -i "VARA" t/example/data/processed/test002/sample4/backup/sample4.csv >> t/example/data/processed/test002/sample4/grep_VARA/sample4.grep_VARA.csv
 
 
-echo "Working on t/example/data/processed/test002/sample2/backup/sample2.csv"
-grep -i "VARA" t/example/data/processed/test002/sample2/backup/sample2.csv >> t/example/data/processed/test002/sample2/grep_VARA/sample2.grep_VARA.csv
+echo "Working on t/example/data/processed/test002/sample5/backup/sample5.csv"
+grep -i "VARA" t/example/data/processed/test002/sample5/backup/sample5.csv >> t/example/data/processed/test002/sample5/grep_VARA/sample5.grep_VARA.csv
 
 
 
@@ -101,10 +101,10 @@ wait
 # Outdir: t/example/data/processed/test002/grep_VARB
 #
 
-grep -i "VARB" t/example/data/processed/test002/sample5/grep_VARA/sample5.grep_VARA.csv >> t/example/data/processed/test002/sample5/grep_VARB/sample5.grep_VARA.grep_VARB.csv
-
-
 grep -i "VARB" t/example/data/processed/test002/sample1/grep_VARA/sample1.grep_VARA.csv >> t/example/data/processed/test002/sample1/grep_VARB/sample1.grep_VARA.grep_VARB.csv
+
+
+grep -i "VARB" t/example/data/processed/test002/sample2/grep_VARA/sample2.grep_VARA.csv >> t/example/data/processed/test002/sample2/grep_VARB/sample2.grep_VARA.grep_VARB.csv
 
 
 grep -i "VARB" t/example/data/processed/test002/sample3/grep_VARA/sample3.grep_VARA.csv >> t/example/data/processed/test002/sample3/grep_VARB/sample3.grep_VARA.grep_VARB.csv
@@ -113,7 +113,7 @@ grep -i "VARB" t/example/data/processed/test002/sample3/grep_VARA/sample3.grep_V
 grep -i "VARB" t/example/data/processed/test002/sample4/grep_VARA/sample4.grep_VARA.csv >> t/example/data/processed/test002/sample4/grep_VARB/sample4.grep_VARA.grep_VARB.csv
 
 
-grep -i "VARB" t/example/data/processed/test002/sample2/grep_VARA/sample2.grep_VARA.csv >> t/example/data/processed/test002/sample2/grep_VARB/sample2.grep_VARA.grep_VARB.csv
+grep -i "VARB" t/example/data/processed/test002/sample5/grep_VARA/sample5.grep_VARA.csv >> t/example/data/processed/test002/sample5/grep_VARB/sample5.grep_VARA.grep_VARB.csv
 
 
 
